--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Echo Pull Request ID
-        run: echo ${{ github.event.pull_request.id }}
+        run: echo ${{ github.event.pull_request.number }}
 
       - name: Echo Issue Number
         run: echo ${{ github.event.number }}
